--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <packaging>kjar</packaging>
   <name>recursoshumanos</name>
   <description>recursoshumanos</description>
+  <distributionManagement>
+    <repository>
+      <id>bxms-projects</id>
+      <url>http://192.168.122.40:8081/repository/bxms-projects/</url>
+      <layout>default</layout>
+    </repository>
+  </distributionManagement>
   <dependencies>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
