--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.myspace</groupId>
+  <groupId>com.learning</groupId>
   <artifactId>recursoshumanos</artifactId>
-  <version>1.1.2-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>recursoshumanos</name>
   <description>Repositorio para proyecto de recursos humanos.</description>
