--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0</version>
   <packaging>kjar</packaging>
   <name>recursoshumanos</name>
-  <description>Repositorio para proyecto de recursos humanos.</description>
+  <description>Repositorio para proyecto de recursos humanos</description>
   <dependencies>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
