--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.learning</groupId>
   <artifactId>recursoshumanos</artifactId>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>recursoshumanos</name>
-  <description>Repositorio para proyecto de recursos humanos</description>
+  <description>Repositorio para proyecto de recursos humanos.</description>
   <dependencies>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
