--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>recursoshumanos</name>
-  <description>Repositorio para proyecto de recursos humanos</description>
+  <description>Repositorio para proyecto de recursos humanos.</description>
   <distributionManagement>
     <repository>
       <id>bxms-projects</id>
